--- a/src/main/webapp/resources/front2/css/custom_style.css
+++ b/src/main/webapp/resources/front2/css/custom_style.css
@@ -1,5 +1,8 @@
  
-body {padding-top: 54px;}
+body {
+	padding-top: 54px;
+	font-size: 0.9rem;  	 	
+}
 
 @media (min-width: 992px) {
 	body {padding-top: 56px;}
